Open the jdk.internal.misc package
Fix #86